--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -79,7 +79,7 @@
 				<h2>About 225 Million Years Ago</h2>
 				<p> Dinosaurs and Mammals </a> appeared.</p>
 				<a href="http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals" class="cd-read-more">Read more</a>
-				<span class="cd-date"><img src="firstmammals.jpg" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/firstmammals.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
