images moved to image folder

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -17,6 +17,8 @@
 	<style type="text/css">
 					h1{
 				font-family: 'dinosaurregular';
+
+			}
 							}
 		</style>
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
@@ -187,7 +189,7 @@
 				<h2> 150,000 years ago</h2>
 				<p> Homo Sapiens evolved.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="img/earlyhomosapien.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -200,7 +202,7 @@
 				<h2>550 A.D<span>.</span></a></h2>
 				<p> Giant tree at AMNH began growing.</p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree" class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"><img src="img/gianttree.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
