--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -55,7 +55,7 @@
 				<h2> 248 Million Years Ago </h2>
 				<p> Start of the Mesozoic Era. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"> <img src="mesozoicera.jpg" height="80%" width="100%"></span>
+				<span class="cd-date"> <img src="img/mesozoicera.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -68,7 +68,7 @@
 				<h2> 245 to 240 Million Years Ago </h2>
 				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="Nyasasaurus.png" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/Nyasasaurus.png" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -95,7 +95,7 @@
 				<h2>220 to 66 Million Years Ago</a></h2>
 				<p> Pterosaurs Existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Read more</a>
-				<span class="cd-date"><img src ="pterosaur.jpg" height="80%" width ="100%"></span>
+				<span class="cd-date"><img src ="img/pterosaur.jpg" height="80%" width ="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -108,7 +108,7 @@
 				<h2> 200 Million Years Ago</h2>
 				<p> Pangea separates.</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="pangea.gif" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/pangea.gif" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -122,7 +122,7 @@
 				<h2>199 to 145 Million Years Ago</a></h2>
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Read more</a>
-				<span class="cd-date"><img src ="treeofparaves.png" height="70%" width="85%"></span>
+				<span class="cd-date"><img src ="img/treeofparaves.png" height="70%" width="85%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -137,7 +137,7 @@
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="cretaceous.jpg" height ="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/cretaceous.jpg" height ="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -150,7 +150,7 @@
 				<h2>85 to 65 Million Years Ago</a></h2>
 				<p> Tyrannosaurus Rex Existed.</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Read more</a>
-				<span class="cd-date"><img src="trex.png" height="80%" width="100%"</span>
+				<span class="cd-date"><img src="img/trex.png" height="80%" width="100%"</span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -302,7 +302,7 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
+	
 			<div class="cd-timeline-content">
 				<h2>Jan 2016 </a></h2>
 				<p> Titanosaur arrived at AMNH.</p>
