added a read more button to one div

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -291,9 +291,9 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2> <a href= "http://www.amnh.org/learn-teach/grades-9-12/bridgeup-stem"> 2014 </a></h2>
+				<h2> 2014 </h2>
 				<p> BridgeUp:STEM founded.</p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<a href="http://www.amnh.org/learn-teach/grades-9-12/bridgeup-stem" class="cd-read-more">Read more</a>
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
