--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -23,6 +23,7 @@
 						top: 0;
 						right: 0;
 						border: 3px solid #9A3334;
+						background-color: #9A3334;
 					}
 		</style>
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
