--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -14,7 +14,8 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<style type="text/css">
+
+/*	<style type="text/css">
 					h1{
 						font-family: 'dinosaurregular';
 					}
@@ -24,8 +25,8 @@
 						right: 0;
 						border: 3px solid #9A3334;
 						background-color: #9A3334;
-					}
-		</style>
+					} 
+		</style> -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	<title>Responsive Vertical Timeline</title>
 </head>
