--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -14,29 +14,36 @@
 
 	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-
-/*	<style type="text/css">
+	<style type="text/css">
 					h1{
 						font-family: 'dinosaurregular';
+						color: red;
 					}
 					div.fixed {
 						position: fixed;
 						top: 0;
-						right: 0;
 						border: 3px solid #9A3334;
 						background-color: #9A3334;
+						z-index: 2;
+						width: 100%;
 					} 
-		</style> -->
+					span.content-title{
+						font-family: 'dinosaurregular';
+						color: #8B668B;
+						font-size: 16px;
+					}
+		</style>
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	<title>Responsive Vertical Timeline</title>
 </head>
 
 <body>
-	<div class="fixed">
-Titanosaur Contents
+
+<div class="fixed">
+<span class="content-title">Titanosaur Contents</span><br/>
 <a href="#one">Top</a><br/>
-<a href="#two">200 Years Ago</a>
-<a href="#three">550 A.D.</a>
+<a href="#two">200 Years Ago</a><br/>
+<a href="#three">550 A.D.</a><br/>
 </div>
 
 	<header>
@@ -50,7 +57,7 @@ Titanosaur Contents
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<a name="one"><h2>About 270 Million Years Ago</h2></a>
+				<a name="one">Read more<h2>About 270 Million Years Ago</h2></a>
 				<p> Pangaea formed. </p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Read more</a>
 				<br> <br> <br> </p>
