--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -223,15 +223,45 @@
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
+
+	<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="img/egg.png" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+	
+			<div class="cd-timeline-content">
+				<h2>1821-22</a></h2>
+				<p> Mary Anning discovers the world's first Plesiosaur skeleton at Lyme. </p>
+				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Read more</a>
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
+	
 			<div class="cd-timeline-content">
-				<h2> December 1815 </h2>
-				<p> Ada Lovelace, known to some as the “First Computer Programmer,” wrote the first algorithm for Charles Babbage’s Analytical Engine. </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<h2>1974</a></h2>
+				<p> Discovery of Lucy. </p>
+				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Read more</a>
+				<span class="cd-date"><!--date--></span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+
+
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="img/egg.png" alt="Picture">
+			</div> <!-- cd-timeline-img -->
+	
+			<div class="cd-timeline-content">
+				<h2>1996</a></h2>
+				<p> Discovery of Sinornithosaurus. </p>
+				<a href="http://www.amnh.org/exhibitions/dinosaurs-ancient-fossils-new-discoveries/liaoning-diorama/the-liaoning-forest"class="cd-read-more">Read more</a>
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -240,50 +270,11 @@
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
+	
 			<div class="cd-timeline-content">
-				<h2> 1833 </h2>
-				<p> Charles Babbage, “Father of the Computer”, thought of his idea of creating an Analytical Engine, along with a printer to output the contents of the computer. Babbage was never able to finish the project because the British government defunded it. His son, Henry Babbage, finished a simpler version of the Analytical Engine in 1888. </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
-			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<h2> 1924 </h2>
-				<p> Evelyn Boyd Granville was born. She was one of the first African-American women to receive a PhD from Yale in mathematics. Throughout her career, she built computer programs that were used for trajectory analysis in the Mercury Project and the Apollo Project. </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
-			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<h2> July 1976 </h2>
-				<p> Apple releases its first computer, the Apple 1 for $666.66. </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
-
-		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
-			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<h2> 1992 </h2>
-				<p> Grace Murray Hopper, creator of COBOL one of the first computer languages and of the term “debug” as well as the first woman to earn a PhD in mathematics from Yale and the first woman to reach the rank of Admiral in the U.S. Navy, passed away. </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
+				<h2>2004 </h2>
+				<p> Discovery of Tiktaalik - A transitional form between lobe-finned fish and tetrapods is discovered in Canada. </p>
+				<a href=""class="cd-read-more">Read more</a>
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -294,26 +285,13 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2> Spring 2014 </a></h2>
+				<h2> Spring 2014 </h2>
 				<p> The Femur of the first Titanosaur was discovered.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Read more</a>
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-
-	<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
-				<img src="img/egg.png" alt="Picture">
-			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content">
-				<h2> 2014 </h2>
-				<p> BridgeUp:STEM founded.</p>
-				<a href="http://www.amnh.org/learn-teach/grades-9-12/bridgeup-stem" class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
-			</div> <!-- cd-timeline-content -->
-		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
