--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -24,15 +24,16 @@
 						top: 0;
 						border: 3px solid #9A3334;
 						background-color: #9A3334;
-						z-index: 2;
+						z-index: 2;  
 						width: 100%;
-					} 
+					}
 					span.content-title{
 						font-family: 'dinosaurregular';
 						color: #8B668B;
-						font-size: 16px;
+						font-size: 100px;
 					}
 		</style>
+		<!-- In the style tag, z-index is basically saying that you want this layer to be on the top of other items. This helped us because now we can click the button anytime we wanted unlike before when it would hide underneath other items. -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	<title>Responsive Vertical Timeline</title>
 </head>
@@ -42,7 +43,7 @@
 <div class="fixed">
 <span class="content-title">Titanosaur Contents</span><br/>
 <a href="#one">Top</a><br/>
-<a href="#two">200 Years Ago</a><br/>
+<a href="#two">200 Million Years Ago</a><br/>
 <a href="#three">550 A.D.</a><br/>
 </div>
 
