--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -29,8 +29,12 @@
 					}
 					span.content-title{
 						font-family: 'dinosaurregular';
-						color: #8B668B;
-						font-size: 100px;
+						color: #217C7E;
+						font-size: 30px;
+					}
+					a.hrefs{
+						font-family: sans-serif;
+						color: #3399FF;
 					}
 		</style>
 		<!-- In the style tag, z-index is basically saying that you want this layer to be on the top of other items. This helped us because now we can click the button anytime we wanted unlike before when it would hide underneath other items. -->
@@ -42,9 +46,10 @@
 
 <div class="fixed">
 <span class="content-title">Titanosaur Contents</span><br/>
-<a href="#one">Top</a><br/>
-<a href="#two">200 Million Years Ago</a><br/>
-<a href="#three">550 A.D.</a><br/>
+	<a href="#one" class="hrefs" >Top</a><br/>
+	<a href="#two" class="hrefs">200 Million Years Ago</a><br/>
+	<a href="#three" class="hrefs">550 A.D.</a><br/>
+</span>
 </div>
 
 	<header>
