--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -43,12 +43,16 @@
 </head>
 
 <body>
-
 <div class="fixed">
-<span class="content-title">Titanosaur Contents</span><br/>
-	<a href="#one" class="hrefs" >Top</a><br/>
-	<a href="#two" class="hrefs">200 Million Years Ago</a><br/>
-	<a href="#three" class="hrefs">550 A.D.</a><br/>
+<span class="content-title">Titanosaur Contents</span><br/><br/>
+	<table border="1" style="width:50%">
+  <tr>
+    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+    <td><a href="#one" class="hrefs">Top</a></td>
+    <td><a href="#two" class="hrefs">200 Million Years Ago</a></td>
+    <td><a href="#three" class="hrefs">550 A.D.</a></td>
+</tr>
+</table>
 </span>
 </div>
 
@@ -63,7 +67,7 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<a name="one">Read more<h2>About 270 Million Years Ago</h2></a>
+				<a name="one"><h2>About 270 Million Years Ago</h2></a>
 				<p> Pangaea formed. </p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Read more</a>
 				<br> <br> <br> </p>
@@ -112,7 +116,7 @@
 
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
-				<img src="img/ptero.png" alt="Picture">
+				<img src="img/ptero.png" alt="Picture" height="100%" width="100%">
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
