--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -30,11 +30,13 @@
 					span.content-title{
 						font-family: 'dinosaurregular';
 						color: #217C7E;
-						font-size: 30px;
+						font-size: 40px;
+						display: block;
 					}
 					a.hrefs{
 						font-family: sans-serif;
 						color: #3399FF;
+						font-size: 20px;
 					}
 		</style>
 		<!-- In the style tag, z-index is basically saying that you want this layer to be on the top of other items. This helped us because now we can click the button anytime we wanted unlike before when it would hide underneath other items. -->
@@ -47,9 +49,9 @@
 <span class="content-title">Titanosaur Contents</span><br/><br/>
 	<table border="1" style="width:50%">
   <tr>
-    <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
-    <td><a href="#one" class="hrefs">Top</a></td>
-    <td><a href="#two" class="hrefs">200 Million Years Ago</a></td>
+    <td>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</td>
+    <td><a href="#one" class="hrefs">Back to Top</a></td>
+    <td><a href="#two" class="hrefs">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;200 Million Years Ago</a></td>
     <td><a href="#three" class="hrefs">550 A.D.</a></td>
 </tr>
 </table>
