--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -28,7 +28,7 @@
 <body>
 <div class="fixed">
 <span class="content-title">Titanosaur Contents</span><br/><br/>
-	<table border="1" style="width:50%">
+	<table border="1" style="width:50%" align="right">
   <tr>
     <td>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</td>
     <td><a href="#one" class="hrefs">Back to Top</a></td>
