--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -22,7 +22,7 @@
 		</style>
 		<!-- In the style tag, z-index is basically saying that you want this layer to be on the top of other items. This helped us because now we can click the button anytime we wanted unlike before when it would hide underneath other items. -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
-	<title>Responsive Vertical Timeline</title>
+	<title>Titanosaur Timeline</title>
 </head>
 
 <body>
