--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -356,7 +356,7 @@
 
 		<div class="cd-timeline-content">
 				<h2> 150,000 years ago</h2>
-				<p> Homo Sapiens evolved.</p>
+				<p> Homo sapiens sapiens evolved.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/podcasts/podcast-masters-of-the-planet-with-ian-tattersall" class="cd-read-more"
 				<!--<a href="#0" class="cd-read-more">Read more</a>
 				<span class="cd-date"><img src="img/earlyhomosapien.jpg" height="80%" width="100%"></span>
