--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -28,12 +28,13 @@
 <body>
 
 <div class="fixed">
-	<table border="1" style="width:50%" align="right">
+	<table border="1" style="width:50%" align="left">
   <tr>
     <td>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</td>
     <td><a href="#one" class="hrefs">Back to Top</a></td>
-    <td><a href="#two" class="hrefs">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;75 Million Years Ago</a></td>
-    <td><a href="#three" class="hrefs">550 A.D.</a></td>
+    <td><a href="#two" class="hrefs">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;A Titanosaur?</a></td>
+    <td><a href="#three" class="hrefs">AMNH's Tree!</a></td>
+    <td><a href="aboutus.html" style="color: #3399FF; font-size:20px">About us</a>
 </tr>
 </table>
 </span>
@@ -174,7 +175,7 @@
 	</div>
 
 		<div class="cd-timeline-block">
-			<div class="cd-timeline-img cd-picture">
+			<div class="cd-timeline-img cd-picture"><!--the color of the back of the icon in the circle-->
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
