--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -52,7 +52,7 @@
 			<div class="cd-timeline-content">
 				<h2>About 270 Million Years Ago</h2>
 				<p> Pangaea formed. </p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Click here to learn more about Pangea</a>
 				<br> <br> <br> </p>
 				<span class="cd-date"><img src="img/pangaea.jpg" class="img-responsive" width="50%" height="50%"></span>
 			</div> <!-- cd-timeline-content -->
@@ -66,6 +66,7 @@
 			<div class="cd-timeline-content">
 				<h2> 248 Million Years Ago </h2>
 				<p> Start of the Mesozoic Era. </p>
+				<a href="http://www.amnh.org/explore/ology/paleontology/mesozoic-museum2">Click here to make your own Mesozoic era museum</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"> <img src="img/mesozoicera.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
@@ -104,7 +105,8 @@
 			<div class="cd-timeline-content">
 				<h2>220 to 66 Million Years Ago</h2>
 				<p> Pterosaurs Existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Click here to watch a video on Pterosaurs</a>
+
 				<span class="cd-date"><img src ="img/pterosaur.jpg" height="80%" width ="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
