--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -105,9 +105,11 @@
 			<div class="cd-timeline-content">
 				<h2>220 to 66 Million Years Ago</h2>
 				<p> Pterosaurs Existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Click here to watch a video on Pterosaurs</a>
-
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Click here to watch a video on Pterosaurs</a>	
+				<br> <br> <br> </p>
+				<p style="font-size:13px;">Visit pterosaurs on the 4th floor in the Hall of Vertebrate Origins</p>
 				<span class="cd-date"><img src ="img/pterosaur.jpg" height="80%" width ="100%"></span>
+
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -132,7 +134,9 @@
 			<div class="cd-timeline-content">
 				<h2>199 to 145 Million Years Ago</a></h2>
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Click here to watch a video about Paraves</a>
+				<br> <br> <br> </p>
+				<p style="font-size:13 px;">To learn more about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
 				<span class="cd-date"><img src ="img/treeofparaves.png" height="70%" width="85%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -145,7 +149,7 @@
 			<div class="cd-timeline-content">
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/030-cretaceous-period" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/ology/ology-cards/030-cretaceous-period" class="cd-read-more">Click here to read more about the Cretaceous period</a>
 				<span class="cd-date"><img src="img/cretaceous.jpg" height ="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -159,7 +163,9 @@
 		<div class="cd-timeline-content">
 				<h2>85 to 65 Million Years Ago</a></h2>
 				<p> Tyrannosaurus Rex Existed.</p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Click here for children-friendly reading on the T-Rex</a>
+				<br> <br> <br> </p>
+				<p style="font-size: 13px;">Visit the T-Rex in the Hall of Saurischian Dinosaurs on the 4th floor.</p>
 				<span class="cd-date"><img src="img/trex.png" height="80%" width="100%"</span>
 			</div> <!-- cd-timeline-content -->
 
@@ -171,7 +177,9 @@
 			<div class="cd-timeline-content">
 			<h2>75 Million Years Ago</h2>
 			<p>Meet the Titanosaur!</p>
-			<a href="http://www.amnh.org/explore/news-blogs/podcasts/toast-the-titanosaur" class="cd-read-more">Read more</a>
+			<a href="http://www.amnh.org/explore/news-blogs/podcasts/toast-the-titanosaur" class="cd-read-more">Click here to learn more about the Titanosaur</a>
+			<br> <br> <br> </p>
+			<p style="font-size: 13 px;">Visit the Titanosaur at the Wallach Orientation Center on the 4th floor.</p>
 			<span class="cd-date"></span>
 		</div>
 	</div>
@@ -301,7 +309,8 @@
 			<div class="cd-timeline-content" style="background:#DEB887">
 				<h2>Exhibit</h2>
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. 
- </p>
+ 				</p>
+ 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps">Click here to learn more about the titanosaur</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
