--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -66,7 +66,7 @@
 			<div class="cd-timeline-content">
 				<h2> 248 Million Years Ago </h2>
 				<p> Start of the Mesozoic Era. </p>
-				<a href="http://www.amnh.org/explore/ology/paleontology/mesozoic-museum2">Click here to make your own Mesozoic era museum</a>
+				<a href="http://www.amnh.org/explore/ology/paleontology/mesozoic-museum2" class="cd-read-more">Click here to make your own Mesozoic era museum</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"> <img src="img/mesozoicera.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
@@ -310,7 +310,7 @@
 				<h2>Exhibit</h2>
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. 
  				</p>
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps">Click here to learn more about the titanosaur</a>
+ 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-mount-a-titanosaur-in-ten-steps" class="cd-read-more">Click here to learn more about the titanosaur</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
