changed another read more box

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -326,7 +326,7 @@
 				<h2>Additional Info</h2>
 				<p> It took scientists two weeks to put all of the casts together and get them ready for the exhibit. Over the two years it took to dig up the 223 bones, these paleontologists transformed the knowledge of dinosaurs.
  				</p>
- 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur">Click to learn more about building the titanosaur</a>
+ 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the titanosaur</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
