--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -136,7 +136,7 @@
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Click here to watch a video about Paraves</a>
 				<br> <br> <br> </p>
-				<p style="font-size:13 px;">To learn more about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
+				<p style="font-size:13px;">To learn more about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
 				<span class="cd-date"><img src ="img/treeofparaves.png" height="70%" width="85%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -179,7 +179,7 @@
 			<p>Meet the Titanosaur!</p>
 			<a href="http://www.amnh.org/explore/news-blogs/podcasts/toast-the-titanosaur" class="cd-read-more">Click here to learn more about the Titanosaur</a>
 			<br> <br> <br> </p>
-			<p style="font-size: 13 px;">Visit the Titanosaur at the Wallach Orientation Center on the 4th floor.</p>
+			<p style="font-size: 13px;">Visit the Titanosaur at the Wallach Orientation Center on the 4th floor.</p>
 			<span class="cd-date"></span>
 		</div>
 	</div>
@@ -352,7 +352,10 @@
 		<div class="cd-timeline-content">
 				<h2>6 to 7 million years ago </a></h2>
 				<p> First member of human family, Hominidae, existed.</p>
-				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree" class="cd-read-more">Click to learn more about the human family tree</a>
+				<br> <br> <br> </p>
+				<p style="font-size: 13px;">Visit the Spitzer Hall of Human Origins on the first floor to learn more about human ancentry.</p>
+
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
