--- a/vertical-timeline-jenny/women.html
+++ b/vertical-timeline-jenny/women.html
@@ -18,5 +18,15 @@
 	<title>Women in Tech</title>
 </head>
 <body>
+	<div class="fixed">
+		<table border="1" style="width:50%" align="left">
+  <tr>
+  	<td>&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;</td>
+    <td><a href="#one" class="hrefs">Back to Top</a></td>
+    <td><a href="#two" class="hrefs">&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;A Titanosaur?</a></td>
+    <td><a href="#three" class="hrefs">AMNH's Tree!</a></td>
+    <td><a href="aboutus.html" style="color: #3399FF; font-size:20px">About us</a>
+</tr>
+</table>
 </body>
 </html>
