Added links and changed titles

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -370,7 +370,9 @@
 				<h2> 150,000 years ago</h2>
 				<p> Homo sapiens sapiens evolved.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/podcasts/podcast-masters-of-the-planet-with-ian-tattersall" class="cd-read-more"
-				<!--<a href="#0" class="cd-read-more">Read more</a>
+				<!--<a href="#0" class="cd-read-more">Click to learn more about Homo Sapiens</a>
+				<br> <br> <br> </p>
+				<p style="font-size:13px">Visit the Spitzer Hall of Human Origins to learn more about Homo Sapiens</p>
 				<span class="cd-date"><img src="img/earlyhomosapien.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -384,7 +386,9 @@
 		<div class="cd-timeline-content">
 				<h2>550 A.D<span>.</span></h2>
 				<p> Giant tree at AMNH began growing.</p>
-				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree" class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree" class="cd-read-more">Click to learn more about the Giant Sequoia Tree</a>
+				<br> <br> <br> </p>
+				<p style="font-size:13px;">Visit the Hall of North American Forests on the first floor to look at the Giant Sequoia Tree upclose!</p>
 				<span class="cd-date"><img src="img/gianttree.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
