--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -52,7 +52,7 @@
 			<div class="cd-timeline-content">
 				<h2>About 270 Million Years Ago</h2>
 				<p> Pangaea formed. </p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">Click here to learn more about Pangea</a>
+				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">What is a Pangaea?</a>
 				<br> <br> <br> </p>
 				<span class="cd-date"><img src="img/pangaea.jpg" class="img-responsive" width="50%" height="50%"></span>
 			</div> <!-- cd-timeline-content -->
@@ -66,7 +66,7 @@
 			<div class="cd-timeline-content">
 				<h2> 248 Million Years Ago </h2>
 				<p> Start of the Mesozoic Era. </p>
-				<a href="http://www.amnh.org/explore/ology/paleontology/mesozoic-museum2" class="cd-read-more">Click here to make your own Mesozoic era museum</a>
+				<a href="http://www.amnh.org/explore/ology/paleontology/mesozoic-museum2" class="cd-read-more">Make your own Mesozoic era museum!</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
 				<span class="cd-date"> <img src="img/mesozoicera.jpg" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
@@ -105,7 +105,7 @@
 			<div class="cd-timeline-content">
 				<h2>220 to 66 Million Years Ago</h2>
 				<p> Pterosaurs Existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Click here to watch a video on Pterosaurs</a>	
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Besides a dinosaur, what is a Pterosaur?</a>	
 				<br> <br> <br> </p>
 				<p style="font-size:13px;">Visit pterosaurs on the 4th floor in the Hall of Vertebrate Origins</p>
 				<span class="cd-date"><img src ="img/pterosaur.jpg" height="80%" width ="100%"></span>
@@ -136,7 +136,7 @@
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Click here to watch a video about Paraves</a>
 				<br> <br> <br> </p>
-				<p style="font-size:13px;">To learn more about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
+				<p style="font-size:13px;">Learn about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
 				<span class="cd-date"><img src ="img/treeofparaves.png" height="70%" width="85%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -149,7 +149,7 @@
 			<div class="cd-timeline-content">
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/030-cretaceous-period" class="cd-read-more">Click here to read more about the Cretaceous period</a>
+				<a href="http://www.amnh.org/explore/ology/ology-cards/030-cretaceous-period" class="cd-read-more">Read more about the Cretaceous time period</a>
 				<span class="cd-date"><img src="img/cretaceous.jpg" height ="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
