added info about Lucy

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -415,7 +415,9 @@
 	<div class="cd-timeline-content">
 				<h2>1974</a></h2>
 				<p> Discovery of Lucy. </p>
-				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
+				<br> <br> <br> </p>
+				<p style="font-size:13px;">Visit Lucy at the Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
 					<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
