read more changes

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -52,7 +52,7 @@
 			<div class="cd-timeline-content">
 				<h2>About 270 Million Years Ago</h2>
 				<p> Pangaea formed. </p>
-				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">What is a Pangaea?</a>
+				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">What is Pangaea?</a>
 				<br> <br> <br> </p>
 				<span class="cd-date"><img src="img/pangaea.jpg" class="img-responsive" width="50%" height="50%"></span>
 			</div> <!-- cd-timeline-content -->
@@ -431,7 +431,8 @@
 			<div class="cd-timeline-content">
 				<h2>1996</a></h2>
 				<p> Discovery of Sinornithosaurus. </p>
-				<a href="http://www.amnh.org/exhibitions/dinosaurs-ancient-fossils-new-discoveries/liaoning-diorama/the-liaoning-forest"class="cd-read-more">Read more</a>
+				<a href="http://www.amnh.org/exhibitions/dinosaurs-ancient-fossils-new-discoveries/liaoning-diorama/the-liaoning-forest"class="cd-read-more">Click here to learn more about the Sinornithosaurus</a>
+
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -456,8 +457,10 @@
 
 			<div class="cd-timeline-content">
 				<h2> Spring 2014 </h2>
-				<p> The Femur of the first Titanosaur was discovered.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Read more</a>
+				<p> The Titanosaur femur was discovered.</p>
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
+				<br> <br> <br> </p>
+				<p style="font-size:13px;">Visit the titanosaur on the 4th floor in the Wallach Orientation Center</p>
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
