--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -39,9 +39,9 @@
 </table>
 </span>
 </div>
-<a name="one">
+<a name="one"></a>
 	<header>
-		<h1>Titanosaur Timeline</h1></a>
+		<h1>Titanosaur Timeline</h1>
 	</header>
 	<section id="cd-timeline" class="cd-container">
 
@@ -169,8 +169,8 @@
 				<span class="cd-date"><img src="img/trex.png" height="80%" width="100%"</span>
 			</div> <!-- cd-timeline-content -->
 
-<a name="two">
-	<div class="cd-timeline-block"> <a/>
+<a name="two"></a>
+	<div class="cd-timeline-block"> 
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cracked_egg.png" alt="Picture">
 			</div>
