--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -42,9 +42,10 @@
 <a name="one"></a>
 	<header>
 		<h1>Titanosaur Timeline</h1>
-	</header>
+	</header><br></br>
+	<center><p>This website is a cohesive timeline of events centered around the Titanosaur.<br></br>
+		The beige color difference for the boxes note the main Titanosaur facts. The information provides  links to AMNH.</p></center>
 	<section id="cd-timeline" class="cd-container">
-
 	<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/egg.png" alt="Picture">
@@ -53,8 +54,7 @@
 				<h2>About 270 Million Years Ago</h2>
 				<p> Pangaea formed. </p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/255-pangaea" class="cd-read-more">What is Pangaea?</a>
-				<br> <br> <br> </p>
-				<span class="cd-date"><img src="img/pangaea.jpg" class="img-responsive" width="50%" height="50%"></span>
+				<span class="cd-date"><img src="img/pangaea.jpg" alt="Picture" class="img-responsive" width="50%" height="50%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -68,7 +68,7 @@
 				<p> Start of the Mesozoic Era. </p>
 				<a href="http://www.amnh.org/explore/ology/paleontology/mesozoic-museum2" class="cd-read-more">Make your own Mesozoic era museum!</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"> <img src="img/mesozoicera.jpg" height="80%" width="100%"></span>
+				<span class="cd-date"> <img src="img/mesozoicera.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -81,7 +81,7 @@
 				<h2> 245 to 240 Million Years Ago </h2>
 				<p> Nyasasaurus parringtoni, earliest known dinosaur to exist. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="img/Nyasasaurus.png" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/Nyasasaurus.png" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -94,7 +94,7 @@
 				<h2>About 225 Million Years Ago</h2>
 				<p> Dinosaurs and Mammals appeared.</p>
 				<a href="http://www.amnh.org/exhibitions/fighting-dinos/the-rise-of-mammals" class="cd-read-more">Read more</a>
-				<span class="cd-date"><img src="img/firstmammals.jpg" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/firstmammals.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -105,10 +105,10 @@
 			<div class="cd-timeline-content">
 				<h2>220 to 66 Million Years Ago</h2>
 				<p> Pterosaurs Existed.</p>
-				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">Besides a dinosaur, what is a Pterosaur?</a>	
+				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">What are Pterosaurs like?</a>	
 				<br> <br> <br> </p>
-				<p style="font-size:13px;">Visit pterosaurs on the 4th floor in the Hall of Vertebrate Origins</p>
-				<span class="cd-date"><img src ="img/pterosaur.jpg" height="80%" width ="100%"></span>
+				<p style="font-size:13px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021">Hall of Vertebrate Origins</p>
+				<span class="cd-date"><img src ="img/pterosaur.jpg" alt="Picture" height="80%" width ="100%"/></span>
 
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -121,8 +121,8 @@
 			<div class="cd-timeline-content">
 				<h2> 200 Million Years Ago</h2>
 				<p> Pangea separates.</p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><img src="img/pangea.gif" height="80%" width="100%"></span>
+				<!--<a href="#0" class="cd-read-more">Read more</a> not needed -->
+				<span class="cd-date"><img src="img/pangea.gif" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -132,12 +132,11 @@
 			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>199 to 145 Million Years Ago</a></h2>
+				<h2>199 to 145 Million Years Ago</h2>
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Click here to watch a video about Paraves</a>
-				<br> <br> <br> </p>
 				<p style="font-size:13px;">Learn about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
-				<span class="cd-date"><img src ="img/treeofparaves.png" height="70%" width="85%"></span>
+				<span class="cd-date"><img src ="img/treeofparaves.png" alt="Picture" height="70%" width="85%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -150,7 +149,7 @@
 				<h2> 141 Million Years Ago</h2>
 				<p> Cretaceous period. (Lasted 65.5 million years)</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/030-cretaceous-period" class="cd-read-more">Read more about the Cretaceous time period</a>
-				<span class="cd-date"><img src="img/cretaceous.jpg" height ="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/cretaceous.jpg" alt="Picture" height ="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -165,8 +164,8 @@
 				<p> Tyrannosaurus Rex Existed.</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Click here for children-friendly reading on the T-Rex</a>
 				<br> <br> <br> </p>
-				<p style="font-size: 13px;">Visit the T-Rex in the Hall of Saurischian Dinosaurs on the 4th floor.</p>
-				<span class="cd-date"><img src="img/trex.png" height="80%" width="100%"</span>
+				<p style="font-size: 13px;">Visit the T-Rex in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17022">Hall of Saurischian Dinosaurs on the 4th floor.</p>
+				<span class="cd-date"><img src="img/trex.png" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 
 <a name="two"></a>
@@ -193,8 +192,8 @@
 				<h2>Diet</h2>
 				<p> Titanosaurs were herbivores however, the vegetation did not provide them with much nutritional value. Its five-story long neck allowed it to reach tall trees and vegetation without ever moving their body.
 </p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<!--<a href="#0" class="cd-read-more">Read more</a>
+				<span class="cd-date">date</span>-->
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -208,7 +207,6 @@
 				<h2>Nesting</h2>
 				<p> Female titanosaurs dug holes with their hind legs and laid about 30 to 40 eggs per hole. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on their skin protecting them from predators. Titanosaurs laid their eggs near active volcanoes because the added heat helped with incubation. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -222,7 +220,7 @@
 				<h2>Location and Time Period</h2>
 				<p> The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -373,7 +371,7 @@
 				<!--<a href="#0" class="cd-read-more">Click to learn more about Homo Sapiens</a>
 				<br> <br> <br> </p>
 				<p style="font-size:13px">Visit the Spitzer Hall of Human Origins to learn more about Homo Sapiens</p>
-				<span class="cd-date"><img src="img/earlyhomosapien.jpg" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/earlyhomosapien.jpg" alt="Picture" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -389,7 +387,7 @@
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree" class="cd-read-more">Click to learn more about the Giant Sequoia Tree</a>
 				<br> <br> <br> </p>
 				<p style="font-size:13px;">Visit the Hall of North American Forests on the first floor to look at the Giant Sequoia Tree upclose!</p>
-				<span class="cd-date"><img src="img/gianttree.jpg" height="80%" width="100%"></span>
+				<span class="cd-date"><img src="img/gianttree.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -403,7 +401,6 @@
 				<h2>1821-22</a></h2>
 				<p> Mary Anning discovers the world's first Plesiosaur skeleton at Lyme. </p>
 				<a href="http://www.amnh.org/explore/news-blogs/on-exhibit-posts/happy-birthday-mary-anning" class="cd-read-more"> Read more</a>
-				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -418,7 +415,6 @@
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
 				<br> <br> <br> </p>
 				<p style="font-size:13px;">Visit Lucy at the Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
-					<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -432,8 +428,6 @@
 				<h2>1996</a></h2>
 				<p> Discovery of Sinornithosaurus. </p>
 				<a href="http://www.amnh.org/exhibitions/dinosaurs-ancient-fossils-new-discoveries/liaoning-diorama/the-liaoning-forest"class="cd-read-more">Click here to learn more about the Sinornithosaurus</a>
-
-				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -446,7 +440,6 @@
 				<h2>2004 </h2>
 				<p> Discovery of Tiktaalik - A transitional form between lobe-finned fish and tetrapods is discovered in Canada. </p>
 				<a href=""class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -461,7 +454,7 @@
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
 				<br> <br> <br> </p>
 				<p style="font-size:13px;">Visit the titanosaur on the 4th floor in the Wallach Orientation Center</p>
-				<span class="cd-date"><!--date--></span>
+				<!-- <span class="cd-date"><!--date--></span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -475,7 +468,7 @@
 				<h2>Jan 2016 </a></h2>
 				<p> Titanosaur arrived at AMNH.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Read more</a>
-				<span class="cd-date"><!--date--></span>
+				<!--<span class="cd-date"><!--date--></span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
