gave titanosaur info an id

--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -187,13 +187,10 @@
 			<div class="cd-timeline-img cd-picture"><!--the color of the back of the icon in the circle-->
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
-
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Diet</h2>
 				<p> Titanosaurs were herbivores however, the vegetation did not provide them with much nutritional value. Its five-story long neck allowed it to reach tall trees and vegetation without ever moving their body.
-</p>
-				<!--<a href="#0" class="cd-read-more">Read more</a>
-				<span class="cd-date">date</span>-->
+				</p>
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -203,7 +200,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino" style="background:#DEB887">
 				<h2>Nesting</h2>
 				<p> Female titanosaurs dug holes with their hind legs and laid about 30 to 40 eggs per hole. The fertilized eggs were about 11 cm long in diameter and had bead-like scales on their skin protecting them from predators. Titanosaurs laid their eggs near active volcanoes because the added heat helped with incubation. </p>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
@@ -216,7 +213,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Location and Time Period</h2>
 				<p> The titanosaur (sauropods group) existed 100 to 66 million years ago during the Cretaceous era. Titanosaur fossils have been found on every continent. 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
@@ -230,7 +227,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>How was it found?</h2>
 				<p> The Titanosaur was found by a farmer who was looking for a lost sheep when he spotted some fossils peeking out of the ground in La Flecha, Argentina. He then contacted scientists who realized the dinosaur was different from the rest of those previously discovered.
  </p>
@@ -244,7 +241,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Physicality</h2>
 				<p> The titanosaur’s femur was 8 feet long, the largest ever found. Scientists first noted  its uniqueness because the lower end of the femur was straight as opposed to flared like that of other dinosaurs. The swing of their tail helped impulse their legs to walk and counteracted their heavy neck. The titanosaur was 20 feet tall from the ground up to its shoulder and over 3 times the size of a school bus. It weighed approximately 70 tons and evolved to walk on horseshoe-like stumps to reduce the impact walking had on the bones.</p> 
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
@@ -258,7 +255,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Theories Over Death</h2>
 				<p> The average titanosaur’s lifespan was 50 years. The first theory over their extinction was that because young males were usually isolated from herds at birth, they often died at a young age, leading to females not being able to reproduce. The second theory is that because there were active volcanoes in the area, titanosaurs laid their eggs in the area because of the heat the volcanoes emitted. However, when the volcanos erupted, it eradicated all vegetation, starving the, and eventually killing them.
  </p>
@@ -273,7 +270,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Negative Aspect of Its Size</h2>
 				<p> The titanosaur’s large size made the flow of blood and oxygen from the heart and brain  to the rest of the body slower and harder. Its massive size and weight made the titanosaurs move slower because it took longer for nerve signals to reach the brain.
 
@@ -289,7 +286,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Positive Aspect of Its Size</h2>
 				<p> The titanosaur’s large size deterred any potential predators from attacking. Its long neck allowed it to have greater access to vegetation in tall trees.
  </p>
@@ -304,7 +301,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Exhibit</h2>
 				<p> The exhibit at the Museum of Natural History was inaugurated in January of 2016 and is on exhibit on the fourth floor. The titanosaur is too big for its hall, therefore its head is poking out warmly welcoming guests to the hall. 
  				</p>
@@ -320,7 +317,7 @@
 				<img src="img/cd-icon-picture.svg" alt="Picture">
 			</div> <!-- cd-timeline-img -->
 
-			<div class="cd-timeline-content" style="background:#DEB887">
+			<div class="cd-timeline-content" id="dino">
 				<h2>Additional Info</h2>
 				<p> It took scientists two weeks to put all of the casts together and get them ready for the exhibit. Over the two years it took to dig up the 223 bones, these paleontologists transformed the knowledge of dinosaurs.
  				</p>
