--- a/vertical-timeline-jenny/index.html
+++ b/vertical-timeline-jenny/index.html
@@ -17,6 +17,9 @@
 						font-family: 'dinosaurregular';
 						color: red;
 					}
+					img {
+					    z-index: -1;
+					}
 		</style>
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
 	<title>Titanosaur Timeline</title>
@@ -101,7 +104,7 @@
 				<p> Pterosaurs Existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/pterosaurs-explained/what-is-a-pterosaur" class="cd-read-more">What are Pterosaurs like?</a>	
 				<br> <br> <br> </p>
-				<p style="font-size:13px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021">Hall of Vertebrate Origins</p>
+				<p style="font-size:14px;">Visit pterosaurs on the 4th floor in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17021">Hall of Vertebrate Origins</p>
 				<span class="cd-date"><img src ="img/pterosaur.jpg" alt="Picture" height="80%" width ="100%"/></span>
 
 			</div> <!-- cd-timeline-content -->
@@ -127,7 +130,8 @@
 				<h2>199 to 145 Million Years Ago</h2>
 				<p> Paraves, ancestor of the modern-day birds, existed.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/dinosaurs-among-us/dinosaurs-among-us-opens-march-21" class="cd-read-more">Click here to watch a video about Paraves</a>
-				<p style="font-size:13px;">Learn about praves, visit the Dinosaurs Among Us exhibit in the LeFrak Family Gallery on the 4th floor.</p>
+				<br></br>
+				<p style="font-size:14px;">Learn about praves, visit the <a href="http://www.amnh.org/exhibitions/dinosaurs-among-us/">Dinosaurs Among Us</a> exhibit in the LeFrak Family Gallery on the 4th floor.</p>
 				<span class="cd-date"><img src ="img/treeofparaves.png" alt="Picture" height="70%" width="85%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -155,7 +159,7 @@
 				<p> Tyrannosaurus Rex Existed.</p>
 				<a href="http://www.amnh.org/explore/ology/ology-cards/003-tyrannosaurus-rex" class="cd-read-more">Click here for children-friendly reading on the T-Rex</a>
 				<br> <br> <br> </p>
-				<p style="font-size: 13px;">Visit the T-Rex in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17022">Hall of Saurischian Dinosaurs on the 4th floor.</p>
+				<p style="font-size: 14px;">Visit the T-Rex in the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17022">Hall of Saurischian Dinosaurs on the 4th floor.</p>
 				<span class="cd-date"><img src="img/trex.png" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 
@@ -169,7 +173,7 @@
 			<p>Meet the Titanosaur!</p>
 			<a href="http://www.amnh.org/explore/news-blogs/podcasts/toast-the-titanosaur" class="cd-read-more">Click here to learn more about the Titanosaur</a>
 			<br> <br> <br> </p>
-			<p style="font-size: 13px;">Visit the Titanosaur at the Wallach Orientation Center on the 4th floor.</p>
+			<p style="font-size: 14px;">Visit the Titanosaur at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p>
 			<span class="cd-date"></span>
 		</div>
 	</div>
@@ -314,7 +318,7 @@
  				</p>
  				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/how-to-build-a-titanosaur" class="cd-read-more">Click to learn more about building the titanosaur</a>
 				<!--<a href="#0" class="cd-read-more">Read more</a>-->
-				<span class="cd-date"><!--date--></span>
+				<span class="cd-date"> <img src="img/Installation.png" height="80%" width="100%"/></span>
 				</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -340,7 +344,7 @@
 				<p> First member of human family, Hominidae, existed.</p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/understanding-our-past/our-family-tree" class="cd-read-more">Click to learn more about the human family tree</a>
 				<br> <br> <br> </p>
-				<p style="font-size: 13px;">Visit the Spitzer Hall of Human Origins on the first floor to learn more about human ancentry.</p>
+				<p style="font-size: 14px;">Show me the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Spitzer Hall of Human Origins on the first floor</a> so I can learn more about human ancentry!</p>
 
 				<span class="cd-date"><!--date--></span>
 			</div> <!-- cd-timeline-content -->
@@ -358,7 +362,7 @@
 				<a href="http://www.amnh.org/explore/news-blogs/podcasts/podcast-masters-of-the-planet-with-ian-tattersall" class="cd-read-more"
 				<!--<a href="#0" class="cd-read-more">Click to learn more about Homo Sapiens</a>
 				<br> <br> <br> </p>
-				<p style="font-size:13px">Visit the Spitzer Hall of Human Origins to learn more about Homo Sapiens</p>
+				<p style="font-size:14px">Visit the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Spitzer Hall of Human Origins on the first floor</a> to learn more about Homo Sapiens</p>
 				<span class="cd-date"><img src="img/earlyhomosapien.jpg" alt="Picture" height="80%" width="100%"></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -373,7 +377,7 @@
 				<p> Giant tree at AMNH began growing.</p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/biodiversity-and-environmental-halls/hall-of-north-american-forests/giant-sequoia-tree" class="cd-read-more">Click to learn more about the Giant Sequoia Tree</a>
 				<br> <br> <br> </p>
-				<p style="font-size:13px;">Visit the Hall of North American Forests on the first floor to look at the Giant Sequoia Tree upclose!</p>
+				<p style="font-size:14px;">Visit the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16993">Hall of North American Forests on the first floor</a> to look at the GIANT Sequoia Tree upclose!</p>
 				<span class="cd-date"><img src="img/gianttree.jpg" alt="Picture" height="80%" width="100%"/></span>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
@@ -400,7 +404,7 @@
 				<p> Discovery of Lucy. </p>
 				<a href="http://www.amnh.org/exhibitions/permanent-exhibitions/human-origins-and-cultural-halls/anne-and-bernard-spitzer-hall-of-human-origins/lucy"class="cd-read-more">Click here to learn more about Lucy</a>
 				<br> <br> <br> </p>
-				<p style="font-size:13px;">Visit Lucy at the Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
+				<p style="font-size:14px;">Visit Lucy at the <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/16988">Anne and Bernard Spitzer Hall of Human Origins on the first floor.</p>
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -439,8 +443,7 @@
 				<p> The Titanosaur femur was discovered.</p>
 				<a href="http://www.amnh.org/explore/amnh.tv/(watch)/the-titanosaur/meet-the-titanosaur" class="cd-read-more">Click here to Meet the Titanosaur</a>
 				<br> <br> <br> </p>
-				<p style="font-size:13px;">Visit the titanosaur on the 4th floor in the Wallach Orientation Center</p>
-				<!-- <span class="cd-date"><!--date--></span> -->
+				<p style="font-size:14px;">Come learn about the Titanosaur <a href="http://www.amnh.org/plan-your-visit/interactive-floor-plan/(open)/17020">Wallach Orientation Center on the 4th floor.</p><!-- <span class="cd-date">date</span>-->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
@@ -454,11 +457,10 @@
 				<h2>Jan 2016 </a></h2>
 				<p> Titanosaur arrived at AMNH.</p>
 				<a href="http://www.amnh.org/explore/news-blogs/news-posts/the-titanosaur-arrives" class="cd-read-more">Read more</a>
-				<!--<span class="cd-date"><!--date--></span> -->
+				<!--<span class="cd-date">--><!--date--><!--</span> -->
 			</div> <!-- cd-timeline-content -->
 		</div> <!-- cd-timeline-block -->
 
-		
 	</section> <!-- cd-timeline -->
 </body>
 </html>
